--- a/.github/workflows/update-achievements.yml
+++ b/.github/workflows/update-achievements.yml
@@ -8,7 +8,9 @@ on:
     # Winter (CET, UTC+1): 00:00 Madrid = 23:00 UTC
     - cron: '0 23 * 11,12,1,2,3 *'
   push:
+    branches: [ main ]
     paths:
+      - "README.md"
       - ".github/workflows/update-achievements.yml"
       - ".github/scripts/fetch-achievements.js"
 
